2001-04-25  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Config.pm (processARGV): Fixed call to usage().
	* Netcomics/Factory.pm (dump_rli): Changed to delete unneeded
	fields only from completely download comics.
	(load_rlis): Redesigned to load in global & regular rli files so
	that load_rlis() could be removed to unduplicate code.
	(init): Adjusted code that was using load_rli() & load_rlis() to
	eliminate duplicated code.
	(get_comics): Moved where the subdirectory is created when
	separate_comics is selected to after it's been determined if the
	rli needs to be skipped to avoid needlessly creating
	subdirectories.

2001-04-24  Elliot Glaysher <nuriko.chan@home.com>

	* debian/*: Elliot redesigned Debian packages, and is the new
	maintainer.
	
2001-04-23  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/HTML.pm (create_webpage_set): Fixed use of
	libdate_sort().
	* Makefile (install_pms): added substitution of configurable
	install data in Config.pm

2001-04-23  Elliot Glaysher <nuriko.chan@home.com>

	* netcomics, Netcomics/Config.pm, Netcomics/HTML.pm: HTML.pm now
	uses Ben's nice Config.pm for options, instead of having to set
	everything manually.
	
2001-04-23  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Config.pm (processARGV): Added require of Util so that
	mkgmtime is accessible.
	* Netcomics/Factory.pm (list_comics): Fixed syntax error with how
	libdate_sort was being called.  Made %hof a class attribute loaded
	only once for all Factory instances.  Fixed max name & title
	string length algorithm.

2001-04-22  Elliot Glaysher <nuriko.chan@home.com>

	* Netcomics/Factory.pm: Fixed bug that caused "Sort subroutine
	didn't return single value at /usr/lib/perl5/Netcomics/Factory.pm
	line 865." on netcomics -l.
	
2001-04-22  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Modularized the rest of netcomics.

2001-04-22  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
